# leveleditor_feedthebear

./: .gitignore
minigame_locally/: .clasp.json.example  .eslintrc.cjs  .gitignore  .markdownlint.json  AGENTS.md  CLAUDE_LEVEL_EDITOR_DOC_PROMPT.md  CUTOVER_PLAN.md  DESIGN_LEARNINGS_FROM_ABC.md  DESIGN_SYSTEM_CODEX.md  FEED_THE_BEAR_GDD.md  FTB_Level_Feedback_Template.xlsx  GOOGLE_SHEETS_API_SYNC_PLAN.md  LEVEL_GENERATOR_SPEC.md  LEVEL_TOOLKIT_LIVE_STATUS.md  LEVEL_TOOLKIT_PRODUCT_NOTES.md  PARITY_MIGRATION_COMPLETE.md  (+35 more)
minigame_locally/python_toolkit/: CHANGELOG.md  PARITY_CHECKLIST.md  PHASE_2B_BACKLOG.md  README.md  pyproject.toml  run_cli.py  start_desktop.py  start_ui.py  start_ui.sh  stop_ui.sh
minigame_locally/python_toolkit/src/feed_the_bear_toolkit/: __init__.py  cli.py
minigame_locally/python_toolkit/src/feed_the_bear_toolkit/domain/: __init__.py  levels.py  models.py  procedural.py  progressions.py  sessions.py  validation.py
minigame_locally/python_toolkit/src/feed_the_bear_toolkit/services/: __init__.py  config.py  procedural.py  repo_io.py  sheets_api_client.py  spreadsheet.py
minigame_locally/python_toolkit/src/feed_the_bear_toolkit/ui/: __init__.py  app.py  native_app.py  server.py
minigame_locally/python_toolkit/tests/: __init__.py  test_cli.py  test_editor_api_integration.py  test_editor_history.py  test_level_packs.py  test_native_app.py  test_procedural.py  test_procedural_service.py  test_progressions.py  test_repo_io.py  test_sessions.py  test_sheets_api_client.py  test_spreadsheet.py  test_spreadsheet_native.py  test_ui_server.py
(+2009 files in other folders)
