[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feed-the-bear-toolkit"
version = "0.1.0"
description = "Python-first migration target for the Feed the Bear local toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ftb-toolkit = "feed_the_bear_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
